Fri May 31 12:06:13 1996  Kevin Layer  <layer@freezer>

	* fi-modes.el: fix doc string per an spr

Fri May 31 11:36:32 1996    <layer@hobart.franz.com>

	* fi-shell.el: for emacs 19.31 on windows
	* fi-subproc.el: for windows
	* fi-version.el: fix on-ms-windows function

Tue May 21 13:04:00 1996  layer  (layer at HOBART)

	* fi-keys.el: rfe2356: duplicate global bindings on C-c

Thu May 16 14:48:48 1996  layer  (layer at HOBART)

	* fi-keys.el: undo hacks for key bindings--they turn out to be
	only necessary for me because of my moving the escape key (to
	~/`); also, undo editi hacks
	* fi-site-init.el: add comments, fix fi::load to do the compile
	even if the .elc exists but is older than the .el
	* fi-subproc.el: for windows

Wed May 15 16:34:58 1996  layer  (layer at HOBART)

	* fi-indent.el: fix the indent spec for destructuring-bind

Wed May 15 16:22:47 1996  Kevin Layer  <layer@freezer>

	* fi-emacs19.el: make installation of menubar optional (defaults
	  is the same as previous behaviour)
	* fi-keys.el: define-key hacking for lemacs' way of doing things
	* fi-site-init.el: new way of loading, with fi::load, which
	  compiles any of the files if they are not already compiled.  This
	  was primarily done because on windows people might not have
	  `make', to be able to build all the .elc files.
	* fi-version.el: define "on-ms-windows"

*******************************************************************************
2.0.19 public release
*******************************************************************************

*******************************************************************************
4.3.devel.18 (aka 4.3.final)

Tue Mar 26 19:00:37 1996  George Jacob  <georgej@lava.franz.com (George Jacob)>

	* Makefile: Switch to using emacs, to build, rather than xemacs-19.13.

*******************************************************************************
Mon Mar 25 18:14:51 1996  Steve Haflich  <smh@vapor>
