@@ -1,3 +1,10 @@
+Tue Jun  4 13:36:48 1996  Kevin Layer  <layer@freezer>
+
+	* fi-emacs19.el: 
+	* fi-xemacs.el: make menubar changes buffer local to fi: moded
+	buffers
+	* fi-modes.el: support for above
+
 Fri May 31 12:06:13 1996  Kevin Layer  <layer@freezer>
 
 	* fi-modes.el: fix doc string per an spr
